added links from login to register and back

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,4 +15,5 @@
 
                 <button type="submit">Login</button>
         </form>
+        <button><a href="/mobile/register">Du kannst dich auch registrieren!</a></button>
     {/include}
