--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,4 +14,5 @@
 
         <button type="submit">Registrieren</button>
     </form>
+    <button><a href="/mobile/login">Du kannst dich auch direkt einloggen!</a></button>
 {/include}
