feat: implemented UserEvent Resources now states can be updated via ui and api

--- a/src/main/resources/META-INF/resources/css/base.css
+++ b/src/main/resources/META-INF/resources/css/base.css
@@ -263,3 +263,8 @@ nav a .dot {
 footer nav a.active svg {
     fill: #9D8276;
 }
+#unset {
+    all: unset;
+    cursor: pointer;
+    height: 22px;
+}
