--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -10,15 +10,20 @@
                     <path d="M0.321857 9.72255L9.22301 0.821857C9.65215 0.392714 10.3483 0.392714 10.7774 0.821857L11.8157 1.86013C12.2444 2.28882 12.2449 2.98314 11.8176 3.41274L4.76304 10.4998L11.8171 17.5873C12.2449 18.0169 12.244 18.7112 11.8153 19.1399L10.777 20.1781C10.3478 20.6073 9.65169 20.6073 9.22255 20.1781L0.321857 11.277C-0.107286 10.8478 -0.107286 10.1517 0.321857 9.72255Z"/>
                 </svg></a>
                 <h1>{#insert title}Default Title{/}</h1>
-                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M17.516 3c2.382 0 4.487 1.564 4.487 4.712 0 4.963-6.528 8.297-10.003 11.935-3.475-3.638-10.002-6.971-10.002-11.934 0-3.055 2.008-4.713 4.487-4.713 3.18 0 4.846 3.644 5.515 5.312.667-1.666 2.333-5.312 5.516-5.312zm0-2c-2.174 0-4.346 1.062-5.516 3.419-1.17-2.357-3.342-3.419-5.515-3.419-3.403 0-6.484 2.39-6.484 6.689 0 7.27 9.903 10.938 11.999 15.311 2.096-4.373 12-8.041 12-15.311 0-4.586-3.414-6.689-6.484-6.689z"/>
-                </svg>
+                <form style="align-self: flex-end" action="/mobile/user/userevents/{event.id}" method="POST">
+                    <!-- hidden input field:-->
+                    <button id="unset" name="isFavorite" value="{#if event.isFavorite}{false}{#else}{true}{/if}">
+                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="-2 -6 28 31"><path d="M12 4.419c-2.826-5.695-11.999-4.064-11.999 3.27 0 7.27 9.903 10.938 11.999 15.311 2.096-4.373 12-8.041 12-15.311 0-7.327-9.17-8.972-12-3.27z" {#if event.isFavorite}
+                        style="fill: red; stroke: red; stroke-width: 1px;"
+                                {#else} style="fill: transparent; stroke: red; stroke-width: 2px;" {/if}/>
+                </svg></button></form>
             </div>
             <div class="info">
                 <div class="basic-info">
                     <div>
                         <h2 class="white">{event.title} - {event.location}</h2>
-                        <a href="/templates/states.html" require-session up-layer="new" up-mode="modal" id="chip"{#if event.eventState}
-                            class="{event.eventState.cssClass} " > {event.eventState.getLabel}  {#else} class = "none-state">Nicht gesetzt {/if}</a>
+                        <a href="/mobile/user/userevents/{event.id}" require-session up-layer="new" up-mode="modal" id="chip"{#if event.eventState}
+                           class="{event.eventState.cssClass} " > {event.eventState.getLabel}  {#else} class = "none-state">Nicht gesetzt {/if}</a>
                     </div>
                     <h3 class="white">{event.kind}</h3>
                     <h3 class="white">{#if event.duration}{event.duration}{/if}</h3>
