feat: small updates on base.html, Not Containing default Text when attributes are not set.

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -20,10 +20,9 @@
     </head>
     <body>
         {#insert header}
-            No header!
         {/}
         <main>
-            {#insert}No body!{/}
+            {#insert}{/}
         </main>
         <footer>
             <nav>
