feat: updated progressbar to fit design-colors, some annotations, and added unpoly showMore to spielzeiten.html

--- a/src/main/resources/META-INF/resources/css/unpoly.css
+++ b/src/main/resources/META-INF/resources/css/unpoly.css
@@ -21,7 +21,7 @@ up-progress-bar {
   left: 0;
   z-index: 999999999;
   height: 3px;
-  background-color: #007bff;
+  background-color: #9D8276;
 }
 up-focus-trap {
   position: fixed;
