--- a/src/main/resources/templates/stuecke.html
+++ b/src/main/resources/templates/stuecke.html
@@ -56,5 +56,6 @@
     {#if queryParameters.kindFilter} <input type="hidden" name="filter[kind]" value="{queryParameters.kindFilter}">{/if}
     {#if queryParameters.performanceTypeFilter} <input type="hidden" name="filter[performanceType]" value="{queryParameters.performanceTypeFilter}">{/if}
     {#if queryParameters.include} <input type="hidden" name="include" value="{queryParameters.include}">{/if}
-</form>{/if}
+</form>
+{/if}
 {/include}
