--- a/src/main/resources/templates/more.html
+++ b/src/main/resources/templates/more.html
@@ -1,10 +1,103 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{#include base}
+    {#header}
+        <header class="standard">
+        <h1>{#insert title}Mehr{/}</h1>
+        </header>
+    {/header}
+    {#title}Mehr{/title}
+    {#pagecss}
+        <link rel="stylesheet" type="text/css" href="/css/more.css">
+    {/pagecss}
+    <div class="card">
+        <div class="image" style="background-image: url('/media/theater-info/theater.jpg');"></div><!--todo use title attribute for alt-text-->
+        <div class="basic-info">
+            <h2>Theaterkasse</h2>
+            <table>
+                <caption>Öffnungszeiten</caption>
+                <tr>
+                    <td>Montags</td>
+                    <td>geschlossen</td>
+                </tr>
+                <tr>
+                    <td>Dienstags</td>
+                    <td>10:30 - 18:30</td>
+                </tr>
+                <tr>
+                    <td>Mittwochs</td>
+                    <td>10:30 - 14:30</td>
+                </tr>
+                <tr>
+                    <td>Donnerstags</td>
+                    <td>10:30 - 18:30</td>
+                </tr>
+                <tr>
+                    <td>Freitags</td>
+                    <td>10:30 - 14:30</td>
+                </tr>
+                <tr>
+                    <td>Samstags</td>
+                    <td>10:30 - 14:30</td>
+                </tr>
+                <tr>
+                    <td>Sonntags</td>
+                    <td>geschlossen</td>
+                </tr>
+            </table>
+            <a id="contact-mail" href=""><svg width="12" height="10" viewBox="0 0 12 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M11.7727 3.30208C11.8641 3.22135 12 3.29688 12 3.42448V8.75C12 9.4401 11.4961 10 10.875 10H1.125C0.503906 10 0 9.4401 0 8.75V3.42708C0 3.29688 0.133594 3.22396 0.227344 3.30469C0.752344 3.75781 1.44844 4.33333 3.83906 6.26302C4.33359 6.66406 5.16797 7.50781 6 7.5026C6.83672 7.51042 7.6875 6.64844 8.16328 6.26302C10.5539 4.33333 11.2477 3.75521 11.7727 3.30208ZM6 6.66667C6.54375 6.67708 7.32656 5.90625 7.72031 5.58854C10.8305 3.08073 11.0672 2.86198 11.7844 2.23698C11.9203 2.11979 12 1.9375 12 1.74479V1.25C12 0.559896 11.4961 0 10.875 0H1.125C0.503906 0 0 0.559896 0 1.25V1.74479C0 1.9375 0.0796875 2.11719 0.215625 2.23698C0.932813 2.85937 1.16953 3.08073 4.27969 5.58854C4.67344 5.90625 5.45625 6.67708 6 6.66667Z" fill="#888888"/>
+                </svg>karten<span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span>@<!-- sdfsdfszuagdagsbjdaghsdk -->thea<!-- oawepöäaeimpöäamioä -->ter-osnab<!-- oiaweruoiaetusdunz-->rueck.de
+            </a>
+            <a id="contact-phone" href="tel:+495417600076">
+                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9.63672 0.48067L7.60551 0.0119297C7.38481 -0.0388505 7.15826 0.0763815 7.06841 0.283408L6.13093 2.47086C6.0489 2.66226 6.10359 2.88687 6.2657 3.01773L7.44927 3.98646C6.74615 5.48447 5.51767 6.73054 3.9884 7.44732L3.01967 6.26375C2.88686 6.10164 2.66421 6.04696 2.47281 6.12899L0.285354 7.06647C0.0763737 7.15826 -0.0388582 7.38482 0.0119219 7.60552L0.480662 9.63673C0.529489 9.84766 0.716985 10 0.937684 10C5.93953 10 9.99999 5.94735 9.99999 0.937691C9.99999 0.718946 9.8496 0.529497 9.63672 0.48067Z" fill="#888888"/>
+                </svg> <span class="blockspam" aria-hidden="true">PLEASE GO AWAY!</span>05<!--23646890-->41 7<!--98943258706-->6 00<!--7823478234--->0 76</a>
+        </div>
+    </div>
+    <div class="card">
+        <div class="image" style="background-image: url('/media/theater-info/theater.jpg');"></div><!--todo use title attribute for alt-text-->
+        <div class="basic-info">
+            <h2>Theater am Domhof</h2>
+            <p>Domhof 10/11</p>
+            <p>49074 Osnabrück</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="image" id="logo" style="background-image: url('/media/theater-info/emma-theater.jpg');"></div><!--todo use title attribute for alt-text-->
+        <div class="basic-info">
+            <h2>emma-theater</h2>
+            <p>Lotter Straße 6 / Ecke Arndtstraße</p>
+            <p>49078 Osnabrück</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="image" style="background-image: url('/media/theater-info/osnabrueckhalle.jpg');"></div><!--todo use title attribute for alt-text-->
+        <div class="basic-info">
+            <h2>Osnabrück Halle</h2>
+            <p>Schlosswall 1 - 9</p>
+            <p>49074 Osnabrück</p>
+        </div>
+    </div>
+    <div class="card">
+        <div class="logo" style="background-image: url('/media/theater-info/Logo_Theater_OS_neu.jpg');"></div><!--todo use title attribute for alt-text-->
+        <div class="basic-info">
+            <h2>Links</h2>
+            <div><a href="https://theater-osnabrueck.de"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M16.2823 7.35484C15.5806 3.03387 13.9258 0 12 0C10.0742 0 8.41935 3.03387 7.71774 7.35484H16.2823ZM7.35484 12C7.35484 13.0742 7.4129 14.1048 7.51452 15.0968H16.4806C16.5823 14.1048 16.6403 13.0742 16.6403 12C16.6403 10.9258 16.5823 9.89516 16.4806 8.90323H7.51452C7.4129 9.89516 7.35484 10.9258 7.35484 12ZM23.0661 7.35484C21.6823 4.06935 18.8806 1.52903 15.421 0.503226C16.6016 2.13871 17.4145 4.60161 17.8403 7.35484H23.0661ZM8.57419 0.503226C5.11935 1.52903 2.3129 4.06935 0.933871 7.35484H6.15968C6.58065 4.60161 7.39355 2.13871 8.57419 0.503226ZM23.5839 8.90323H18.0339C18.1355 9.91935 18.1935 10.9597 18.1935 12C18.1935 13.0403 18.1355 14.0806 18.0339 15.0968H23.579C23.8452 14.1048 23.9952 13.0742 23.9952 12C23.9952 10.9258 23.8452 9.89516 23.5839 8.90323ZM5.80645 12C5.80645 10.9597 5.86452 9.91935 5.96613 8.90323H0.416129C0.154839 9.89516 0 10.9258 0 12C0 13.0742 0.154839 14.1048 0.416129 15.0968H5.96129C5.86452 14.0806 5.80645 13.0403 5.80645 12ZM7.71774 16.6452C8.41935 20.9661 10.0742 24 12 24C13.9258 24 15.5806 20.9661 16.2823 16.6452H7.71774ZM15.4258 23.4968C18.8806 22.471 21.6871 19.9306 23.071 16.6452H17.8452C17.4194 19.3984 16.6065 21.8613 15.4258 23.4968ZM0.933871 16.6452C2.31774 19.9306 5.11935 22.471 8.57903 23.4968C7.39839 21.8613 6.58548 19.3984 6.15968 16.6452H0.933871Z" fill="#888888"/>
+                    </svg></a>
+                <a href="https://www.facebook.com/TheaterOsnabrueck"><svg width="13" height="24" viewBox="0 0 13 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12.0117 13.5L12.6783 9.15656H8.51063V6.33797C8.51063 5.14969 9.09281 3.99141 10.9594 3.99141H12.8541V0.293438C12.8541 0.293438 11.1347 0 9.49078 0C6.05859 0 3.81516 2.08031 3.81516 5.84625V9.15656H0V13.5H3.81516V24H8.51063V13.5H12.0117Z" fill="#888888"/>
+                    </svg></a>
+                <a href="https://www.instagram.com/theaterosna/"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12.0027 5.8467C8.59744 5.8467 5.85075 8.594 5.85075 12C5.85075 15.406 8.59744 18.1533 12.0027 18.1533C15.4079 18.1533 18.1546 15.406 18.1546 12C18.1546 8.594 15.4079 5.8467 12.0027 5.8467ZM12.0027 16.0004C9.80212 16.0004 8.00312 14.2064 8.00312 12C8.00312 9.7936 9.79677 7.99955 12.0027 7.99955C14.2086 7.99955 16.0022 9.7936 16.0022 12C16.0022 14.2064 14.2032 16.0004 12.0027 16.0004ZM19.8412 5.595C19.8412 6.39295 19.1987 7.03024 18.4062 7.03024C17.6085 7.03024 16.9713 6.38759 16.9713 5.595C16.9713 4.80241 17.6138 4.15977 18.4062 4.15977C19.1987 4.15977 19.8412 4.80241 19.8412 5.595ZM23.9157 7.05166C23.8247 5.12909 23.3856 3.42609 21.9775 2.02298C20.5747 0.619882 18.8721 0.180743 16.9499 0.0843468C14.9689 -0.0281156 9.03112 -0.0281156 7.05008 0.0843468C5.1333 0.175388 3.43068 0.614526 2.02253 2.01763C0.614389 3.42073 0.180703 5.12373 0.0843279 7.0463C-0.0281093 9.02778 -0.0281093 14.9669 0.0843279 16.9483C0.175349 18.8709 0.614389 20.5739 2.02253 21.977C3.43068 23.3801 5.12794 23.8193 7.05008 23.9157C9.03112 24.0281 14.9689 24.0281 16.9499 23.9157C18.8721 23.8246 20.5747 23.3855 21.9775 21.977C23.3803 20.5739 23.8193 18.8709 23.9157 16.9483C24.0281 14.9669 24.0281 9.03314 23.9157 7.05166ZM21.3564 19.0744C20.9388 20.1241 20.1303 20.9327 19.0755 21.3558C17.496 21.9824 13.7481 21.8378 12.0027 21.8378C10.2572 21.8378 6.50396 21.977 4.92984 21.3558C3.88042 20.9381 3.07195 20.1294 2.64897 19.0744C2.02253 17.4946 2.16709 13.7458 2.16709 12C2.16709 10.2542 2.02789 6.50006 2.64897 4.92558C3.06659 3.87593 3.87507 3.06728 4.92984 2.6442C6.50931 2.01763 10.2572 2.16222 12.0027 2.16222C13.7481 2.16222 17.5014 2.02298 19.0755 2.6442C20.1249 3.06192 20.9334 3.87058 21.3564 4.92558C21.9828 6.50541 21.8383 10.2542 21.8383 12C21.8383 13.7458 21.9828 17.4999 21.3564 19.0744Z" fill="#888888"/>
+                    </svg></a>
+                <a href="https://open.spotify.com/show/4aWmsDKXtKmzMOJFLsndgc?si=e1ffbc52e08e4628"><svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 0C5.37581 0 0 5.37581 0 12C0 18.6242 5.37581 24 12 24C18.6242 24 24 18.6242 24 12C24 5.37581 18.6242 0 12 0ZM16.8726 17.6565C16.6694 17.6565 16.5435 17.5935 16.3548 17.4823C13.3355 15.6629 9.82258 15.5855 6.35323 16.2968C6.16452 16.3452 5.91774 16.4226 5.77742 16.4226C5.30806 16.4226 5.0129 16.05 5.0129 15.6581C5.0129 15.1597 5.30806 14.9226 5.67097 14.8452C9.63387 13.9694 13.6839 14.0468 17.1387 16.1129C17.4339 16.3016 17.6081 16.471 17.6081 16.9113C17.6081 17.3516 17.2645 17.6565 16.8726 17.6565ZM18.1742 14.4823C17.9226 14.4823 17.7532 14.371 17.579 14.279C14.5548 12.4887 10.0452 11.7677 6.03387 12.8565C5.80161 12.9194 5.67581 12.9823 5.45806 12.9823C4.94032 12.9823 4.51935 12.5613 4.51935 12.0435C4.51935 11.5258 4.77097 11.1823 5.26935 11.0419C6.61452 10.6645 7.98871 10.3839 10.0016 10.3839C13.1419 10.3839 16.1758 11.1629 18.5661 12.5855C18.9581 12.8177 19.1129 13.1177 19.1129 13.5387C19.1081 14.0613 18.7016 14.4823 18.1742 14.4823ZM19.6742 10.7952C19.4226 10.7952 19.2677 10.7323 19.05 10.6065C15.6048 8.55 9.44516 8.05645 5.45806 9.16935C5.28387 9.21774 5.06613 9.29516 4.83387 9.29516C4.19516 9.29516 3.70645 8.79677 3.70645 8.15323C3.70645 7.49516 4.1129 7.12258 4.54839 6.99677C6.25161 6.49839 8.15806 6.26129 10.2339 6.26129C13.7661 6.26129 17.4677 6.99677 20.1726 8.57419C20.55 8.79194 20.7968 9.09194 20.7968 9.66774C20.7968 10.3258 20.2645 10.7952 19.6742 10.7952Z" fill="#888888"/>
+                    </svg></a>
+                <a href="https://vimeo.com/theaterosna"><svg width="28" height="24" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M27.7432 5.54376C27.6193 8.24497 25.7359 11.9437 22.0806 16.6398C18.3076 21.5466 15.1169 24 12.5024 24C10.8854 24 9.51621 22.5069 8.39484 19.5207C6.21404 11.5162 5.28472 6.82621 3.48184 6.82621C3.2712 6.82621 2.54633 7.26609 1.30104 8.13345L0 6.44829C3.19685 3.64175 6.25121 0.519246 8.1656 0.345773C10.3278 0.135128 11.6536 1.61584 12.1555 4.77552C13.9336 16.0203 14.7204 17.7178 17.9544 12.6252C19.113 10.7913 19.7387 9.39733 19.8254 8.43703C20.1228 5.59332 17.6075 5.78538 15.9037 6.51644C17.2667 2.04952 19.875 -0.118886 23.7224 0.00502321C26.5599 0.0793686 27.9043 1.93181 27.7432 5.54376Z" fill="#888888"/>
+                    </svg></a>
+            </div>
+        </div>
+    </div>
+    <script src="/js/enc-code.js"></script>
+{/include}
